--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <link rel="icon" type="favicon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sales ChatBot</title>
-<!--    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3426069325880451"-->
-<!--            crossorigin="anonymous"></script>-->
   </head>
   <body>
-    <div id="root"></div>
+    <div id="sales_chatbot_root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
