--- a/deploySrc/index2.html
+++ b/deploySrc/index2.html
@@ -6,7 +6,7 @@
   <body>
   <h1>Hello world!</h1>
   <h2>This is a big fat test page.</h2>
-    <script src="sales_chatbot.js"></script>
+    <script src="sales_chatbot.js" data-company-id="edge.app"></script>
 <!--    <link href="https://yourhostedchatbot.com/chatbot.css" rel="stylesheet" type="text/css">-->
   </body>
 </html>
