--- a/deploySrc/index2.html
+++ b/deploySrc/index2.html
@@ -6,6 +6,6 @@
   <body>
   <h1>Hello world!</h1>
   <h2>This is a big fat test page.</h2>
-    <script id="sales_chatbot_script" src="https://kelichatbot2.blob.core.windows.net/salesbot-assets/sales_chatbot.js" data-company-id="edge.app"></script>
+    <script id="sales_chatbot_script" src="https://kelichatbot2.blob.core.windows.net/salesbot-assets/sales_chatbot.js" data-company-id="blacktiecasinoevents"></script>
   </body>
 </html>
