Fix css - remove body style which was blocking scrolling

--- a/deploySrc/index_saleschatbot.html
+++ b/deploySrc/index_saleschatbot.html
@@ -7,6 +7,100 @@
   <body>
   <h1>Hello world!</h1>
   <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
+  <h1>Hello world!</h1>
+  <h2>This is a big fat test page.</h2>
 
   </body>
 </html>
