--- a/deploySrc/index_testing.html
+++ b/deploySrc/index_testing.html
@@ -4,7 +4,7 @@
     <title>My Big Fat Test Page</title>
     <script id="sales_chatbot_script" src="https://kelichatbot2.blob.core.windows.net/salesbot-assets/sales_chatbot.js" data-company-id="erty"></script>
   </head>
-  <body>
+  <body style="background-color: #007bff">
   <h1>Hello world!</h1>
   <h2>This is a big fat test page.</h2>
   <h1>Hello world!</h1>
