Add to chatbot collect_user_info, show_call_to_action.  Cleanup unused chatbot attributes

--- a/deploySrc/index_testing.html
+++ b/deploySrc/index_testing.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>My Big Fat Test Page</title>
-    <script id="sales_chatbot_script" src="https://kelichatbot2.blob.core.windows.net/salesbot-assets/sales_chatbot.js" data-company-id="bobco"></script>
+    <script id="sales_chatbot_script" src="https://kelichatbot2.blob.core.windows.net/salesbot-assets/sales_chatbot.js" data-company-id="a6aldfgjh"></script>
   </head>
   <body style="background-color: #007bff">
   <h1>Hello world!</h1>
