--- a/deploySrc/index_testing.html
+++ b/deploySrc/index_testing.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>My Big Fat Test Page</title>
-    <script id="sales_chatbot_script" src="https://kelichatbot2.blob.core.windows.net/salesbot-assets/sales_chatbot.js" data-company-id="a6aldfgjh"></script>
+    <script id="sales_chatbot_script" src="https://kelichatbot2.blob.core.windows.net/salesbot-assets/sales_chatbot.js" data-company-id="a1horses"></script>
   </head>
   <body>
 
