Move file names and azure blob storage to greeterbot brand

--- a/deploySrc/index_testing.html
+++ b/deploySrc/index_testing.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <title>My Big Fat Test Page</title>
-    <script id="sales_chatbot_script" src="https://kelichatbot2.blob.core.windows.net/salesbot-assets/sales_chatbot.js" data-company-id="a1horses"></script>
+    <script id="greeterbot_script" src="https://greeterbot.blob.core.windows.net/greeterbot-public/greeterbot.js" data-company-id="saleschat_bot"></script>
   </head>
-  <body>
+  <body style="background-color: blanchedalmond">
 
   </body>
 </html>
