--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="favicon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sales ChatBot</title>
+    <title>GreeterBot</title>
   </head>
   <body>
-    <div id="sales_chatbot_root"></div>
+    <div id="greeterbot_root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
